--- a/Week 02/assignment7-optional-path-binaryHeap.html
+++ b/Week 02/assignment7-optional-path-binaryHeap.html
@@ -2,7 +2,7 @@
  * @Author: songyzh
  * @Date: 2020-12-30 13:56:53
  * @LastEditors: songyzh
- * @LastEditTime: 2020-12-30 16:14:16
+ * @LastEditTime: 2020-12-31 17:36:25
 -->
 
 <!DOCTYPE html>
@@ -16,6 +16,8 @@
         display: inline-block;
         width: 5px;
         height: 5px;
+        font-size: 0.2rem;
+        vertical-align: middle;
         background: #e2e2e2;
         border-right: 1px solid #fff;
         border-bottom: 1px solid #fff;
@@ -47,15 +49,70 @@
     <button id="reset">Reset Map</button>
     <button id="find">Find Path</button>
     <script>
-      let map = localStorage.getItem("map")
-        ? JSON.parse(localStorage.getItem("map"))
-        : Array(10000).fill(0);
-
-      let container = document.getElementById("container");
-
       let start = [0, 0];
       let end = [50, 50];
+      let map = localStorage.getItem("map")
+          ? JSON.parse(localStorage.getItem("map"))
+          : Array(10000).fill(0),
+        container = document.getElementById("container"),
+        mousedown = false,
+        clear = false;
+      const CLOSED = 1,
+        OPENED = 0;
+      document.addEventListener("mousedown", (e) => {
+        mousedown = true;
+        clear = e.which === 3;
+      });
 
+      document.getElementById("save").addEventListener("click", (e) => {
+        localStorage.setItem("map", JSON.stringify(map));
+      });
+      document.getElementById("reset").addEventListener("click", (e) => {
+        localStorage.clear();
+        map = Array(10000).fill(0);
+        localStorage.setItem("map", JSON.stringify(map));
+        renderMap();
+      });
+      document.getElementById("find").addEventListener("click", async () => {
+        let route = await findPath(map, start, end);
+      });
+
+      document.addEventListener("mouseup", () => (mousedown = false));
+      document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+      function renderMap() {
+        container.innerHTML = "";
+        for (let col = 0; col < 100; col++) {
+          for (let row = 0; row < 100; row++) {
+            let cell = document.createElement("div");
+            cell.classList.add("cell");
+
+            if (map[col * 100 + row] === CLOSED) {
+              cell.classList.add("black");
+            }
+            if (col == start[1] && row == start[0]) {
+              cell.style.background = "#00f";
+            }
+            if (col == end[1] && row == end[0]) {
+              cell.style.background = "#00f";
+            }
+            cell.addEventListener("mousemove", () => {
+              if (mousedown) {
+                if (clear) {
+                  cell.classList.remove("black");
+                  map[col * 100 + row] = OPENED;
+                } else {
+                  cell.classList.add("black");
+                  map[col * 100 + row] = CLOSED;
+                }
+              }
+            });
+            container.appendChild(cell);
+          }
+        }
+      }
+    </script>
+    <script>
       const GETPARENT = Symbol("get parent");
       const GETLEFTCHILD = Symbol("get left child");
       const GETRIGHTCHILD = Symbol("get right child");
@@ -86,7 +143,7 @@
           this.array.push(data);
           this[CHECKUP](this.length - 1);
         }
-        buildHeap() {}
+
         get length() {
           return this.array.length;
         }
@@ -144,127 +201,129 @@
           return this.array[2 * index + 2] || null;
         }
       }
-
-      function renderMap() {
-        container.innerHTML = "";
-        for (let y = 0; y < 100; y++) {
-          for (let x = 0; x < 100; x++) {
-            let cell = document.createElement("div");
-            cell.classList.add("cell");
-
-            if (map[y * 100 + x] === 1) {
-              cell.classList.add("black");
-            }
-            cell.addEventListener("mousemove", () => {
-              if (mousedown) {
-                if (clear) {
-                  cell.classList.remove("black");
-                  map[y * 100 + x] = 0;
-                } else {
-                  cell.classList.add("black");
-                  map[y * 100 + x] = 1;
-                }
-              }
-            });
-            container.appendChild(cell);
-          }
+    </script>
+    <script>
+      class Node {
+        constructor([row, col]) {
+          this.row = row;
+          this.col = col;
+          this.parent = null;
+          this.g = 0;
+          this.f = 0;
+          this.h = 0;
         }
       }
-
+    </script>
+    <script>
+      let visitedNodes = [];
+      let cost;
       async function findPath(map, start, end) {
-        let table = Object.create(map); // 用来存储最终路径
-        // 广度优先
+        let startNode = new Node(start);
+        let heap = new binaryHeap([startNode], compare);
 
-        let heap = new binaryHeap([start], (a, b) => distance(a) - distance(b));
-        async function insert(x, y, pre) {
-          if (x < 0 || x >= 100 || y < 0 || y >= 100) {
-            // 边界
-            return;
-          }
-
-          // todo 最优路径优化（有bug 路径前置点有问题）
-          let visited = table[100 * y + x];
-          if (visited) {
-            if (Array.isArray(visited)) {
-              // 判断最优前置点
-              if (distance(visited) - distance(pre) > 0) {
-                table[100 * y + x] = pre; // 修改前置点
-              }
-            }
-
-            return;
-          }
-
-          await sleep(1);
-          container.children[100 * y + x].style.backgroundColor = "#28a745";
-          table[100 * y + x] = pre; //已搜索标记
-          heap.push([x, y]);
-        }
         while (heap.length) {
-          let [x, y] = heap.pop();
-          if (x === end[0] && y === end[1]) {
-            let path = [];
-            while (x != start[0] || y != start[1]) {
-              path.push([x, y]);
-              [x, y] = table[y * 100 + x];
-              await sleep(30);
-              container.children[100 * y + x].style.backgroundColor = "#d15704";
-            }
+          let current = heap.pop();
+          container.children[
+            100 * current.col + current.row
+          ].style.backgroundColor = "#ff0";
+          let path = await check(current);
+          if (path) {
             return path;
           }
-          await insert(x - 1, y, [x, y]);
-          await insert(x + 1, y, [x, y]);
-          await insert(x, y - 1, [x, y]);
-          await insert(x, y + 1, [x, y]);
 
-          await insert(x - 1, y - 1, [x, y]);
-          await insert(x + 1, y + 1, [x, y]);
-          await insert(x + 1, y - 1, [x, y]);
-          await insert(x - 1, y + 1, [x, y]);
+          let neighbours = getNeighbours(current);
+          for (let i = 0; i < neighbours.length; i++) {
+            let neighbour = new Node(neighbours[i]);
+            await insert(neighbour, current, map, heap);
+          }
         }
         return null;
       }
+      async function check(current) {
+        let path = [];
+        if (current.row === end[0] && current.col === end[1]) {
+          while (current.parent) {
+            path.push([current.row, current.col]);
+            current = current.parent;
+            await sleep(30);
+            container.children[
+              100 * current.col + current.row
+            ].style.backgroundColor = "#d15704";
+          }
+          return path;
+        }
+        return null;
+      }
+      async function insert(neighbour, current, map, heap) {
+        if (
+          neighbour.row < 0 ||
+          neighbour.row >= 100 ||
+          neighbour.col < 0 ||
+          neighbour.col >= 100
+        ) {
+          // 边界
+          return;
+        }
 
+        if (map[100 * neighbour.col + neighbour.row] === CLOSED) {
+          //遇墙
+          return;
+        }
+        if (neighbour.col == 50 && neighbour.row == 51) {
+          debugger;
+        }
+        let tempG = 0;
+        let tempH = 0;
+        let tempF;
+        if (neighbour.row != current.row && neighbour.col != current.col) {
+          tempG = current.g + 1.4;
+        } else {
+          tempG = current.g + 1;
+        }
+        tempH = distance(neighbour, end);
+        tempF = tempG + tempH;
+        let visited = false;
+
+        if (visitedNodes[neighbour.col * 100 + neighbour.row]) {
+          neighbour = visitedNodes[neighbour.col * 100 + neighbour.row];
+          visited = true;
+        }
+        if (tempF < neighbour.f || !visited) {
+          await sleep(1);
+          container.children[
+            100 * neighbour.col + neighbour.row
+          ].style.backgroundColor = "#28a745";
+          neighbour.g = tempG;
+          neighbour.h = tempH;
+          neighbour.f = tempF;
+          visitedNodes[neighbour.col * 100 + neighbour.row] = neighbour;
+          neighbour.parent = current;
+          heap.push(neighbour);
+        }
+      }
+      function getNeighbours({ row, col }) {
+        return [
+          [row - 1, col],
+          [row + 1, col],
+          [row, col - 1],
+          [row, col + 1],
+          [row - 1, col - 1],
+          [row + 1, col + 1],
+          [row + 1, col - 1],
+          [row - 1, col + 1],
+        ];
+      }
       function sleep(duration) {
         return new Promise((resolve, reject) => {
           setTimeout(resolve, duration);
         });
       }
-
       function distance(point) {
-        return (point[0] - end[0]) ** 2 + (point[1] - end[1]) ** 2;
+        return (point.row - end[0]) ** 2 + (point.col - end[1]) ** 2;
       }
-      let mousedown = false;
-      let clear = false;
-      document.addEventListener("mousedown", (e) => {
-        mousedown = true;
-        clear = e.which === 3;
-      });
-
-      document.addEventListener("mouseup", () => (mousedown = false));
-
-      document.addEventListener("contextmenu", (e) => e.preventDefault());
-      document.getElementById("save").addEventListener("click", (e) => {
-        localStorage.setItem("map", JSON.stringify(map));
-      });
-      document.getElementById("reset").addEventListener("click", (e) => {
-        localStorage.clear();
-        map = Array(10000).fill(0);
-        localStorage.setItem("map", JSON.stringify(map));
-        renderMap();
-      });
-
-      document.getElementById("find").addEventListener("click", async () => {
-        let route = await findPath(map, start, end);
-        // if (route) {
-        //   route.reverse();
-        //   for (let i = 0; i < route.length; i++) {
-        //     let [x, y] = route[i];
-        //     await sleep(30);
-        //     container.children[100 * y + x].style.backgroundColor = "#d15704";
-        //   }
-        // }
-      });
+      function compare(p1, p2) {
+        return distance(p1) - distance(p2);
+      }
       renderMap();
     </script>
   </body>
