--- a/Week 04/assignment3_wild_card.html
+++ b/Week 04/assignment3_wild_card.html
@@ -2,12 +2,17 @@
  * @Author: songyzh
  * @Date: 2021-01-14 16:11:11
  * @LastEditors: songyzh
- * @LastEditTime: 2021-01-14 16:51:39
+ * @LastEditTime: 2021-01-14 17:17:08
 -->
 <script>
   const ZERO_OR_MORE_CHARS = "*";
   const ANY_CHAR = "?";
-
+  /**
+   * @see http://hasullivan.com/2016/04/13/fast-wildcard-matching-in-c-sharp/
+   * @param {string} source
+   * @param {string} pattern
+   * @return {boolean}
+   */
   const wildCardMatching = (source, pattern) => {
     const matchMatrix = Array(source.length + 1)
       .fill(null)
