--- a/Week 03/assignment4_final.html
+++ b/Week 03/assignment4_final.html
@@ -2,7 +2,7 @@
  * @Author: songyzh
  * @Date: 2021-01-08 09:46:11
  * @LastEditors: songyzh
- * @LastEditTime: 2021-01-08 09:47:02
+ * @LastEditTime: 2021-01-08 13:11:21
 -->
 <!--
  * @Author: songyzh
@@ -58,6 +58,7 @@
   }
 </script>
 <script>
+  // 加法判定
   const isAddExpr = (source) => {
     return (
       source[0].type === "AdditiveExpression" &&
@@ -65,6 +66,7 @@
       source[1].type === "+"
     );
   };
+  // 减法判定
   const isSubExpr = (source) => {
     return (
       source[0].type === "AdditiveExpression" &&
@@ -72,6 +74,7 @@
       source[1].type === "-"
     );
   };
+  // 乘法判定
   const isMulExpr = (source) => {
     return (
       source[0].type === "MultiplicativeExpression" &&
@@ -79,6 +82,7 @@
       source[1].type === "*"
     );
   };
+  // 除法判定
   const isDevExpr = (source) => {
     return (
       source[0].type === "MultiplicativeExpression" &&
@@ -86,6 +90,7 @@
       source[1].type === "/"
     );
   };
+
   const expression = (source) => {
     if (source[0].type === "AdditiveExpression") {
       let node = {
@@ -98,6 +103,7 @@
     additiveExpression(source);
     return expression(source);
   };
+
   const additiveExpression = (source) => {
     if (source[0].type === "MultiplicativeExpression") {
       let node = {
